Kubernetes/Web-App/firstapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp
  namespace: firstapp
  labels:
    app: firstapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstapp
  template:
    metadata:
      labels:
        app: firstapp
    spec:
      containers:
      - name: firstapp
        image: legendarsword/cloudvorlesung-app:latest
        ports:
        - name: http
          containerPort: 80
        resources:
         requests:
          cpu: 50m
          memory: 100Mi
         limits:
          cpu: 100m
          memory: 250Mi
