Kubernetes/Web-App/firstapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstapp-service
  namespace: firstapp
spec:
  selector:
    app: firstapp
  ports:
    - protocol: TCP
      port: 80
      name: http
